<package format="2">
  <name>stamped_cmd_vel_mux</name>
  <version>0.0.1</version>
  <description>
     A multiplexer for command velocity inputs. Arbitrates incoming cmd_vel messages from several topics,
     allowing one topic at a time to command the robot, based on priorities. It also deallocates current
     allowed topic if no messages are received after a configured timeout. All topics, together with their
     priority and timeout are configured through a YAML file, that can be reload at runtime.

     This version permits the use of TwistStamped messages, and is based on the yocs_cmd_vel_mux (http://ros.org/wiki/yocs_cmd_vel_mux)
  </description>
  <author>David C. Conner</author>
  <maintainer email="david.conner@cnu.edu">David C. Conner</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/CNURobotics/stamped_cmd_vel_mux</url>
  <url type="repository">https://github.com/CNURobotics/stamped_cmd_vel_mux</url>
  <url type="bugtracker">https://github.com/CNURobotics/stamped_cmd_vel_mux/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nodelet</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>pluginlib</depend>
  <depend>yaml-cpp</depend>

  <export>
    <nodelet plugin="${prefix}/plugins/nodelets.xml" />
  </export>
</package>
